--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -6,18 +6,31 @@
     --gris: #757575;
 }
 
-
 html {
     font-size: 62.5% ;
+    box-sizing: border-box;
+}
+*, *::before, *:after {
+    box-sizing: inherit;
 }
 body {
     font-size: 16px; /* 1rem = 10px */
     font-family: "Krub", sans-serif;
 }
-.titulo{
-    text-align: center;
+h1 {
     font-size: 3.8rem;
 }
+h2 {
+    font-size: 2.8rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+
+h1, h2, h3 {
+    text-align: center;  
+}
+
 .titulo span{
     font-size: 2rem;
 }
@@ -44,12 +57,14 @@ la clase de contenedor OJO en la clase navegacion-principal */
     display: flex;
     flex-direction: column;  
 }
+
 @media (min-width: 768px) {/*tamanho responsive para una table */
     .navegacion-principal{
         flex-direction: row;
         justify-content: space-between;
     }
 }
+
 .navegacion-principal a{
     display: block;
     text-align: center;
@@ -58,7 +73,40 @@ la clase de contenedor OJO en la clase navegacion-principal */
     text-decoration: none;
     font-weight: 700;
 }
+
 .navegacion-principal a:hover{
     background-color: var(--primario);
     color: var(--negro);
+}
+
+.hero{
+    background-image: url(../img/hero.jpg);
+    background-repeat: none !important;
+    background-size: cover;
+    height: 450px;
+    
+    position: relative;
+}
+
+.contenido-hero{
+    position: absolute;
+    /* background-color: rgba(0,0,0, 0.5); sintaxis vieja*/ 
+    background-color: rgb(0 0 0 / 50%); /*sintaxis nueva OJO hay que ver si soporta todos los navegadores*/
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2,
+.contenido-hero p {
+    color: var(--blanco);
+}
+
+.ubicacion{
+    display: flex;
+    align-items: flex-end;
 }
