--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -11,6 +11,13 @@
 html {
     font-size: 62.5% ;
     box-sizing: border-box; /*Hack para box model */
+    scroll-snap-type: y mandatory;
+}
+
+/* para hacer scroll */
+.servicios, .navegacion-principal, .formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 *, *::before, *:after {
     box-sizing: inherit;
@@ -33,12 +40,17 @@ body {
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border: none;
 }
 
 @media (min-width: 480px) {
     .boton {
         width: auto;
     }
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 .sombra{
@@ -151,6 +163,105 @@ la clase de contenedor OJO en la clase navegacion-principal */
     .servicios {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr; /*dividimos en fracciones el 100% es como poner 33.3% tres veces */
-        
+        column-gap: 1rem;   
     }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: 400;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* Contacto */
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%); /*utiliza el valor mas pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 1rem;
+        grid-template-rows: auto auto 20rem;
+    }
+
+    .campo:nth-child(3) {
+        grid-column: 1 / 3;
+    }
+
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+}
+
+.campo {
+    margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--blanco);
+    font-weight: 700;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+
+}
+
+.campo textarea {
+    height: 18rem;
+}
+
+@media (min-width: 768px ) {
+    .enviar .boton {
+        width: auto;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
+
+.footer {
+    text-align: center;
 }
